[gd_scene load_steps=4 format=3 uid="uid://dbska3hnpjl0v"]

[ext_resource type="PackedScene" uid="uid://hl6g4vo3e86p" path="res://scenes/block.tscn" id="1_iv1wa"]
[ext_resource type="Script" path="res://scenes/cannon_block.gd" id="1_socpu"]
[ext_resource type="PackedScene" uid="uid://bl1vkodvkng0c" path="res://scenes/bullet.tscn" id="2_dqaoo"]

[node name="CannonBlock" type="Node" groups=["cannons"]]
process_mode = 1
script = ExtResource("1_socpu")
bullet_scene = ExtResource("2_dqaoo")

[node name="Block" parent="." instance=ExtResource("1_iv1wa")]
modulate = Color(0.286275, 0.286275, 0.286275, 1)
position = Vector2(370, 56)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(370, 58)
scale = Vector2(1.6, 70.503)

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_bullet_timer_timeout"]
